# multiclusters-demo

./: .gitignore  .kluctl.yaml  deploy-multiclusters.sh  deployment.yaml  devbox.json  package-lock.json  package.json  pyproject.toml
.secrets/: .vault-crosscluster-vars.yaml  credentials.sh  extract_vault_vars.sh
00-kind/: kind-config-a.yaml  kind-config-b.yaml  kind-config.sh
00-kind/01-metrics-server/: patch-metrics-server.yaml
01-namespaces/: namespace.yaml
02-third-party/01-vault/: helm-values.yaml
02-third-party/01-vault/01-server/: helm-chart.yaml  helm-values.yaml  kustomization.yaml  vault-service.yaml
02-third-party/01-vault/02-setup/: configmap.yaml  job.yaml  kustomization.yaml  rbac.yaml
02-third-party/01-vault/03-injector/: helm-chart.yaml  helm-values.yaml
02-third-party/02-vso/: kustomization.yaml
02-third-party/02-vso/01-serviceaccount/: kustomization.yaml  vso-service.yaml
02-third-party/02-vso/02-operator/: helm-chart.yaml  helm-values.yaml
02-third-party/02-vso/03-vaultsecret/: ghcrsecret.yaml  kustomization.yaml  rabbitmqsecret.yaml  vaultsecret.yaml
02-third-party/02-vso/operator/: helm-values.yaml  kustomization.yaml
02-third-party/03-rabbitmq/01-operator/: kustomization.yaml
02-third-party/03-rabbitmq/02-cluster/: kustomization.yaml  rabbitmq-cluster.yaml  rabbitmq-service.yaml
02-third-party/03-rabbitmq/03-cluster/: kustomization.yaml  namespace-patch.yaml  patch-credentials.yaml
02-third-party/04-redis/01-operator/: helm-chart.yaml  helm-values.yaml  kustomization.yaml  redis-service.yaml
02-third-party/04-redis/02-cluster/: kustomization.yaml  redis-cluster-service.yaml  redis-cluster.yaml  statefulset-patch.yaml
02-third-party/04-redis/03-redis/: helm-chart.yaml
02-third-party/06-django/: deployment.yaml  kustomization.yaml  serviceaccount.yaml
03-microservices/: docker-compose.yaml  end_to_end_test.py  update_keycloak_client.sh
03-microservices/keycloak_themes/my-theme/login/: login.ftl
03-microservices/keycloak_themes/my-theme/login/resources/css/: styles6.css
03-microservices/keycloak_themes/my-theme/login/resources/js/: script6.js
03-microservices/logwriter/request-response/: celery_producer.py  celery_worker.py
03-microservices/logwriter/task-based/: celery_producer.py  celery_worker.py
03-microservices/subscription_apis/: .dockerignore  Dockerfile
03-microservices/subscription_apis/address_api/: apps.py  authentication.py  models.py  mongodb.py  serializers.py  tests.py  urls.py  views.py
03-microservices/subscription_apis/subscription_apis/: asgi.py  settings.py  urls.py  wsgi.py
03-microservices/subscription_registration/: .dockerignore  Dockerfile.web  Dockerfile.worker
03-microservices/subscription_registration/subscription/: apps.py  forms.py  host.py  models.py  mongodb.py  tasks.py  tests.py  urls.py  views.py
03-microservices/subscription_registration/subscription/static/subscription/js/: auth.js
03-microservices/subscription_registration/subscription/templates/subscription/: base.html  login.html  subscription.html  success.html
03-microservices/subscription_registration/subscription_registration/: asgi.py  celery.py  mongodb_setup.py  settings.py  settings_worker.py  urls.py  wsgi.py
03-microservices/tq-scenarios/: ps_producer.py  ps_worker_1.py  ps_worker_2.py  rr_producer.py  rr_worker.py  wq_producer.py  wq_worker.py
03-vault-setup/: configmap.yaml  job.yaml  kustomization.yaml
04-vaultsecret/: kustomization.yaml  vaultsecret.yaml
tests/inspect/: clusternetworkinspect.sh  submit_address.sh
tests/subscription_api/: config.json  test_api.js
