[project]
name = "multiclusters-demo"
version = "0.1.0"
description = "A demo project for multi-cluster Kubernetes management"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.1.13)",
    "django-extensions (==3.2.3)",
    "requests (==2.31.0)",
    "pymongo (==3.12.3)",
    "celery (==5.3.5)",
    "djangorestframework (==3.14.0)",
    "djongo (==1.3.6)",
    "dnspython (==2.6.1)",
    "flower (==2.0.1)",
    "pika (==1.3.2)",
    "pytz (==2023.3.post1)",
    "redis (==5.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
